Adding pull request and fixing auto move to the next input

--- a/Ron/public/index.html
+++ b/Ron/public/index.html
@@ -11,24 +11,26 @@
         <h1 class="header">Enter the password</h1>
         <div id="CodeArea" class="code_area display-flex">
             <div class="code_input">
-                <input type="number" name="n0" id="n0">
+                <input type="text" name="n0" id="n0" maxlength="1">
             </div>
             <div class="code_input">
-                <input type="number" name="n1" id="n1">
+                <input type="text" name="n1" id="n1" maxlength="1">
             </div>
             <div class="code_input">
-                <input type="number" name="n2" id="n2">
+                <input type="text" name="n2" id="n2" maxlength="1">
             </div>
             <div class="code_input">
-                <input type="number" name="n3" id="n3">
+                <input type="text" name="n3" id="n3" maxlength="1">
             </div>
             <div class="code_input">
-                <input type="number" name="n4" id="n4">
+                <input type="text" name="n4" id="n4" maxlength="1">
             </div>
             <div class="code_input">
-                <input type="number" name="n5" id="n5">
+                <input type="text" name="n5" id="n5" maxlength="1">
             </div>
         </div>
+
+        <button onclick="submit()">Submit</button>
     </div>
 
     <script src="/script.js"></script>
